Добавлена новая секция Hero

--- a/src/partials/_hero-section.html
+++ b/src/partials/_hero-section.html
@@ -1,6 +1,21 @@
 <section class="hero" id="hero">
 	<div class="hero__container container">
-		HERO
-		<h1 class="hero__heading">I'm heading into HERO section!</h1>
+		<h1 class="hero__heading text-reset">
+			<p class="hero__text text-reset">
+				Питание, которое
+				<strong class="ellipse">
+					полюбит
+					<svg class="ellipse__svg">
+						<use xlink:href="img/sprite.svg#ellipse"></use>
+					</svg>
+				</strong>
+				ваш хвостик
+			</p>
+			<p class="hero__text hero__text--sm text-reset">
+				Натуральные рационы питания для собак по системе
+				<strong class="hero__strong">BARF</strong>
+			</p>
+		</h1>
+		<a href="#" class="hero__link main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
 	</div>
 </section>
