--- a/src/scss/resources/_variables.scss
+++ b/src/scss/resources/_variables.scss
@@ -25,6 +25,7 @@ $fz-text: 16px;
 $fz-heading: 46px;
 
 $ff: "Montserrat", sans-serif;
+$ff2: "Oswald", sans-serif;
 
 $minWidth: 320;
 $maxWidth: 1440; // Разрешение макета
