--- a/src/scss/partials/hero/_hero.scss
+++ b/src/scss/partials/hero/_hero.scss
@@ -1,6 +1,116 @@
-main {
-	padding-top: 200px;
+.hero {
+	position: relative;
+	display: flex;
+	align-items: center;
+
+	height: 100%;
+	min-height: 100vh;
+
+	background: url(../img/header-bg.jpg) center/cover no-repeat;
+	&::after {
+		content: "";
+		position: absolute;
+		top: 50%;
+		right: 0;
+		z-index: 0;
+
+		width: 170px;
+		height: 548px;
+
+		background: url(../img/inscription.svg) center/contain no-repeat;
+		transform: translate(0, -50%);
+		@media (max-width: $md3+px) {
+			top: auto;
+			bottom: 0;
+			width: 110px;
+			height: 334px;
+			transform: translate(0, 0);
+		}
+		@include maxwidth(360) {
+			width: 70px;
+			height: 240px;
+		}
+	}
+
+	&__container {
+		position: relative;
+		z-index: 1;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+
+		width: 100%;
+		padding-top: 120px;
+		padding-bottom: 120px;
+	}
+
+	&__heading {
+		position: relative;
+		z-index: 1;
+		max-width: 410px;
+		color: var(--color-white);
+	}
+	&__text {
+		font-family: $ff2;
+		font-size: 54px;
+		font-weight: 700;
+		line-height: 130%;
+		letter-spacing: 0.02em;
+		margin-bottom: 10px;
+		@media (max-width: $md3+px) {
+			margin-bottom: 24px;
+			font-size: 36px;
+		}
+
+		&--sm {
+			margin-bottom: 25px;
+
+			font-family: $ff;
+			font-weight: 400;
+			font-size: 20px;
+			line-height: 140%;
+			@media (max-width: $md4+px) {
+				max-width: 230px;
+				margin-bottom: 48px;
+
+				font-size: 18px;
+			}
+		}
+	}
+	&__strong {
+		font-weight: 500;
+	}
 }
-.body {
-	background-color: #191919;
+
+.ellipse {
+	position: relative;
+	display: inline-block;
+	font-weight: 700;
+
+	&__svg {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		z-index: -1;
+
+		width: 267px;
+		height: 100px;
+
+		opacity: 0;
+		transform: translate(-50%, -50%);
+		&--animated {
+			opacity: 1;
+			animation: show 1s ease-in-out 0s forwards;
+		}
+	}
+}
+
+@keyframes show {
+	from {
+		stroke-dasharray: 0 1000;
+	}
+	to {
+		stroke-dasharray: 1000 0;
+	}
 }
