--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -10,25 +10,25 @@
 			<div class="header__nav-body">
 				<ul class="header__list list-reset">
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">BARF</a>
+						<a href="#about" class="header__link link-reset">BARF</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">Рационы</a>
+						<a href="#diet" class="header__link link-reset">Рационы</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">ZOOOV</a>
+						<a href="#pluses" class="header__link link-reset">ZOOOV</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">О нас</a>
+						<a href="#zooov" class="header__link link-reset">О нас</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">Доставка</a>
+						<a href="#delivery" class="header__link link-reset">Доставка</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">FAQ</a>
+						<a href="#faq" class="header__link link-reset">FAQ</a>
 					</li>
 					<li class="header__item">
-						<a href="#" class="header__link link-reset">Контакты</a>
+						<a href="#contact" class="header__link link-reset">Контакты</a>
 					</li>
 				</ul>
 				<a href="#" class="header__link-diet header__link-diet--hidden main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
