--- a/src/scss/resources/_variables.scss
+++ b/src/scss/resources/_variables.scss
@@ -5,6 +5,7 @@
 	--color-tamarillo: #8b1a12;
 	--color-apricot: #ec7973;
 	--color-shilo: #eab5b7;
+	--color-oysetr-pink: #ead1d0;
 	--color-pink: #fdedee;
 	--color-bunker: #161920;
 	--color-tundora: #424242;
