--- a/src/partials/_about.html
+++ b/src/partials/_about.html
@@ -21,9 +21,9 @@
 		<div class="about__image">
 			<img src="img/about-img.jpg" alt="Песик кушает мясо" class="about__img">
 		</div>
-		<div class="about__classification classification">
+		<div class="about__classification ">
 			<div class="classification-swiper " data-mobile="false">
-				<div class="classification-swiper__pagination"></div>
+				<div class="classification-swiper__pagination swiper-pagination"></div>
 				<div class="classification-swiper__wrapper">
 					<div class="classification-swiper__slide classification-slide">
 						<div class="classification-slide__wrapper">
