--- a/src/partials/_diet.html
+++ b/src/partials/_diet.html
@@ -1,5 +1,111 @@
 <section class="diet section" id="diet">
 	<div class="diet__container container">
-		p
+		<div class="diet__info">
+			<h2 class="diet__heading main-heading text-reset">
+				Рационы <span class="ellipse">
+					ZOOOV
+					<svg class="ellipse__svg ellipse__svg--diet">
+						<use xlink:href="img/sprite.svg#ellipse"></use>
+					</svg>
+				</span>
+			</h2>
+			<p class="diet__text text-reset main-text">
+				Система питания взрослой собаки не подойдет для щенка, поэтому мы создали разные
+				по составу рационы <span class="diet__text--strong">ZOOOV</span>. Вы сможете заказать полноценное питание исходя из возраста, веса и даже вкусовых предпочтений вашего друга. <span class="diet__text--strong">ZOOOV</span> заботится о каждой собаке.
+			</p>
+		</div>
+		<div class="diet__swiper diet-swiper">
+			<div class="diet-swiper__pagination swiper-pagination"></div>
+			<div class="diet-swiper__wrapper">
+				<div class="diet-swiper__slide diet-slide">
+					<article class="diet-slide__wrapper">
+						<div class="diet-slide__info">
+							<img src="img/diet-1.jpg" alt="Упаковка еды для взрослых собак" class="diet-slide__image">
+							<h3 class="diet-slide__heading main-text text-reset">
+								Для взрослых собак
+							</h3>
+							<div class="diet-slide__type">
+								Индейка/Говядина
+							</div>
+							<p class="diet-slide__text text-reset">
+								Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+							</p>
+							<div class="diet-slide__weight text-reset">
+								700г / 500г / 300г / 150г / 100г
+							</div>
+							<button type="button" class="diet-slide__btn btn-reset modal-btn" data-path='modal-descr' aria-label="Открыть описание"></button>
+						</div>
+						<buutton class="diet-slide__order main-btn-link main-btn-link--white btn-reset modal-btn" data-path='modal-order'>Заказать</buutton>
+					</article>
+				</div>
+				<div class="diet-swiper__slide diet-slide">
+					<article class="diet-slide__wrapper">
+						<div class="diet-slide__info">
+							<img src="img/diet-2.jpg" alt="Упаковка еды для взрослых собак" class="diet-slide__image">
+							<h3 class="diet-slide__heading main-text text-reset">
+								Для щенков
+							</h3>
+							<div class="diet-slide__type">
+								Индейка/Говядина
+							</div>
+							<p class="diet-slide__text text-reset">
+								Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+							</p>
+							<div class="diet-slide__weight text-reset">
+								700г / 500г / 300г / 150г / 100г
+							</div>
+							<button type="button" class="diet-slide__btn btn-reset modal-btn" data-path='modal-descr' aria-label="Открыть описание"></button>
+						</div>
+						<buutton class="diet-slide__order main-btn-link main-btn-link--white btn-reset modal-btn" data-path='modal-order'>Заказать</buutton>
+					</article>
+				</div>
+				<div class="diet-swiper__slide diet-slide">
+					<article class="diet-slide__wrapper">
+						<div class="diet-slide__info">
+							<img src="img/diet-3.jpg" alt="Упаковка еды для взрослых собак" class="diet-slide__image">
+							<h3 class="diet-slide__heading main-text text-reset">
+								Для взрослых собак
+							</h3>
+							<div class="diet-slide__type">
+								Баранина/Кролик
+							</div>
+							<p class="diet-slide__text text-reset">
+								Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+							</p>
+							<div class="diet-slide__weight text-reset">
+								700г / 500г / 300г / 150г / 100г
+							</div>
+							<button type="button" class="diet-slide__btn btn-reset modal-btn" data-path='modal-descr' aria-label="Открыть описание"></button>
+						</div>
+						<buutton class="diet-slide__order main-btn-link main-btn-link--white btn-reset  modal-btn" data-path='modal-order'>Заказать</buutton>
+					</article>
+				</div>
+				<div class="diet-swiper__slide diet-slide">
+					<article class="diet-slide__wrapper">
+						<div class="diet-slide__info">
+							<img src="img/diet-4.jpg" alt="Упаковка еды для взрослых собак" class="diet-slide__image">
+							<h3 class="diet-slide__heading main-text text-reset">
+								Для щенков
+							</h3>
+							<div class="diet-slide__type">
+								Индейка/Говядина
+							</div>
+							<p class="diet-slide__text text-reset">
+								Подходит для ежедвеного кормления. Богат животными белками и Омега-3.
+							</p>
+							<div class="diet-slide__weight text-reset">
+								700г / 500г / 300г / 150г / 100г
+							</div>
+							<button type="button" class="diet-slide__btn btn-reset modal-btn" data-path='modal-descr' aria-label="Открыть описание"></button>
+						</div>
+						<buutton class="diet-slide__order main-btn-link main-btn-link--white btn-reset  modal-btn" data-path='modal-order'>Заказать</buutton>
+					</article>
+				</div>
+			</div>
+		</div>
+		<div class="diet__calculate diet-calculate">
+			<p class="diet-calculate__text text-reset">Рассчитаем в каком количестве нужно кормить вашего хвостика рационами Zooov</p>
+			<button class="diet-calculate__btn main-btn-link main-btn-link--red modal-btn btn-reset" data-path='modal-calculate'>Расчитать</button>
+		</div>
 	</div>
 </section>
