--- a/src/partials/_hero-section.html
+++ b/src/partials/_hero-section.html
@@ -5,7 +5,7 @@
 				Питание, которое
 				<strong class="ellipse">
 					полюбит
-					<svg class="ellipse__svg">
+					<svg class="ellipse__svg ellipse__svg--hero">
 						<use xlink:href="img/sprite.svg#ellipse"></use>
 					</svg>
 				</strong>
