Исправлен focus-visible псевдокласс

--- a/src/partials/_hero-section.html
+++ b/src/partials/_hero-section.html
@@ -16,6 +16,6 @@
 				<strong class="hero__strong">BARF</strong>
 			</p>
 		</h1>
-		<a href="#" class="hero__link main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
+		<a href="#diet" class="hero__link main-btn-link main-btn-link--red link-reset">Выбрать рацион</a>
 	</div>
 </section>
