--- a/src/scss/resources/_variables.scss
+++ b/src/scss/resources/_variables.scss
@@ -7,6 +7,8 @@
 	--color-shilo: #eab5b7;
 	--color-oysetr-pink: #ead1d0;
 	--color-pink: #fdedee;
+	--color-chablis: #fff4f3;
+
 	--color-bunker: #161920;
 	--color-tundora: #424242;
 	--color-pewter: #9d9f9e;
