--- a/src/scss/resources/_reset-classes.scss
+++ b/src/scss/resources/_reset-classes.scss
@@ -105,8 +105,7 @@
 }
 .list-reset {
 	text-indent: 0;
-	list-style: none;
-	list-style-type: none;
+	list-style: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'/%3E");
 	line-height: 1;
 	@extend %reset;
 }
