Создана секция FAQ

--- a/src/partials/_pluses.html
+++ b/src/partials/_pluses.html
@@ -1,4 +1,4 @@
-<section class="pluses section">
+<section class="pluses section" id="pluses">
 	<div class="pluses__container container">
 		<h2 class="pluses__heading main-heading text-reset">
 			Почему ZOOOV
