--- a/src/partials/_zooov.html
+++ b/src/partials/_zooov.html
@@ -1,4 +1,4 @@
-<section class="zooov">
+<section class="zooov" id="zooov">
 	<div class="zooov__container container">
 		<div class="zooov__images">
 			<img src="img/zooov.png" alt="Собачки" class="zooov__image zooov__image--desk">
