--- a/src/scss/resources/_variables.scss
+++ b/src/scss/resources/_variables.scss
@@ -3,6 +3,7 @@
 	--color-black: #000;
 
 	--color-tamarillo: #8b1a12;
+	--color-apple: #ab4743;
 	--color-apricot: #ec7973;
 	--color-shilo: #eab5b7;
 	--color-oysetr-pink: #ead1d0;
