Added lazy loading to img

--- a/src/partials/_about.html
+++ b/src/partials/_about.html
@@ -19,7 +19,7 @@
 			</ul>
 		</div>
 		<div class="about__image" data-aos="fade-up" data-aos-delay="0">
-			<img src="img/about-img.jpg" alt="Песик кушает мясо" class="about__img">
+			<img loading="lazy" src="img/about-img.jpg" alt="Песик кушает мясо" class="about__img">
 		</div>
 		<div class="about__classification " data-aos="fade-up" data-aos-delay="0">
 			<div class="classification-swiper " data-mobile="false">
