--- a/src/partials/_diet.html
+++ b/src/partials/_diet.html
@@ -20,7 +20,7 @@
 				<div class="diet-swiper__slide product" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="0">
 					<article class="product__wrapper">
 						<div class="product__info">
-							<img src="img/diet-1.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
+							<img loading="lazy" src="img/diet-1.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
 							<h3 class="product__heading main-text text-reset">
 								Для взрослых собак
 							</h3>
@@ -41,7 +41,7 @@
 				<div class="diet-swiper__slide product" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="100">
 					<article class="product__wrapper">
 						<div class="product__info">
-							<img src="img/diet-2.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
+							<img loading="lazy" src="img/diet-2.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
 							<h3 class="product__heading main-text text-reset">
 								Для щенков
 							</h3>
@@ -62,7 +62,7 @@
 				<div class="diet-swiper__slide product" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="200">
 					<article class="product__wrapper">
 						<div class="product__info">
-							<img src="img/diet-3.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
+							<img loading="lazy" src="img/diet-3.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
 							<h3 class="product__heading main-text text-reset">
 								Для взрослых собак
 							</h3>
@@ -83,7 +83,7 @@
 				<div class="diet-swiper__slide product" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="300">
 					<article class="product__wrapper">
 						<div class="product__info">
-							<img src="img/diet-4.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
+							<img loading="lazy" src="img/diet-4.jpg" alt="Упаковка еды для взрослых собак" class="product__image">
 							<h3 class="product__heading main-text text-reset">
 								Для щенков
 							</h3>
