--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -1,7 +1,7 @@
 <header class="header fixed-padding" id="header">
 	<div class="header__container container">
 		<a class="header__logo link-reset">
-			<img src="img/logo.jpg" alt="Логотип с надписью Зув" class="header__image">
+			<img loading="lazy" src="img/logo.jpg" alt="Логотип с надписью Зув" class="header__image">
 		</a>
 		<button class="header__burger burger btn-reset" aria-label="Открыть меню" aria-expanded="false">
 			<span class="burger__line"></span>
