--- a/src/partials/_modal-response.html
+++ b/src/partials/_modal-response.html
@@ -6,7 +6,7 @@
 			</button>
 			<div class='modal__body response-modal'>
 				<div class="response-modal__image">
-					<img src="img/diet-1.jpg" alt="Ваш рацион" class="response-modal__img">
+					<img loading="lazy" src="img/diet-1.jpg" alt="Ваш рацион" class="response-modal__img">
 				</div>
 				<div class="response-modal__info">
 					<h3 class='response-modal__title text-reset' id='modal-response-title'>
