--- a/src/partials/_modal-order.html
+++ b/src/partials/_modal-order.html
@@ -4,7 +4,7 @@
 			<button aria-label='Закрыть модальное окно' class='order-modal__close modal__close close-modal btn-reset'>
 			</button>
 			<div class="order-modal__image">
-				<img loading="lazy" src="img/image-preview1.jpg" alt="" class="order-modal__img">
+				<img loading="lazy" src="img/image-preview1.jpg" width="330" height="418" alt="" class="order-modal__img">
 			</div>
 			<form action="/" class="order-modal__form order-form">
 				<h3 class="order-form__title text-reset" id="modal-order-title">
