--- a/src/partials/_modal-descr.html
+++ b/src/partials/_modal-descr.html
@@ -5,27 +5,27 @@
 			</button>
 			<div class="descr-modal__image-preview image-preview">
 				<div class="image-preview__main">
-					<img loading="lazy" src="img/image-preview1.jpg" alt="" class="image-preview__main-img" aria-hidden="true">
+					<img loading="lazy" src="img/image-preview1.jpg" width="339" height="400" alt="" class="image-preview__main-img" aria-hidden="true">
 				</div>
 				<ul class="image-preview__list list-reset">
 					<li class="image-preview__item">
 						<button class="image-preview__button image-preview__button--active btn-reset" aria-label="Показть первое изображение">
-							<img loading="lazy" src="img/image-preview1.jpg" alt="" class="image-preview__img" aria-hidden="true">
+							<img loading="lazy" width="66" height="66" src="img/image-preview1.jpg" alt="" class="image-preview__img" aria-hidden="true">
 						</button>
 					</li>
 					<li class="image-preview__item">
 						<button class="image-preview__button btn-reset" aria-label="Показть второе изображение">
-							<img loading="lazy" src="img/image-preview2.jpg" alt="" class="image-preview__img" aria-hidden="true">
+							<img loading="lazy" width="66" height="66" src="img/image-preview2.jpg" alt="" class="image-preview__img" aria-hidden="true">
 						</button>
 					</li>
 					<li class="image-preview__item">
 						<button class="image-preview__button btn-reset" aria-label="Показть третье изображение">
-							<img loading="lazy" src="img/image-preview3.jpg" alt="" class="image-preview__img" aria-hidden="true">
+							<img loading="lazy" width="66" height="66" src="img/image-preview3.jpg" alt="" class="image-preview__img" aria-hidden="true">
 						</button>
 					</li>
 					<li class="image-preview__item">
 						<button class="image-preview__button btn-reset" aria-label="Показть четвертое изображение">
-							<img loading="lazy" src="img/image-preview4.jpg" alt="" class="image-preview__img" aria-hidden="true">
+							<img loading="lazy" width="66" height="66" src="img/image-preview4.jpg" alt="" class="image-preview__img" aria-hidden="true">
 						</button>
 					</li>
 				</ul>
