--- a/src/partials/_zooov.html
+++ b/src/partials/_zooov.html
@@ -1,10 +1,10 @@
 <section class="zooov" id="zooov">
 	<div class="zooov__container container">
 		<div class="zooov__images" data-aos="fade-up" data-aos-delay="0" data-aos-duration="2000">
-			<img loading="lazy" src="img/zooov.png" alt="Собачки" class="zooov__image zooov__image--desk">
+			<img loading="lazy" src="img/zooov.png" width="323" height="433" alt="Собачки" class="zooov__image zooov__image--desk">
 			<img loading="lazy" src="img/zooov-mobile.png" alt="Собачки" class="zooov__image  zooov__image--mobile">
-			<img loading="lazy" src="img/zooov-3.png" alt="Питбуль" class="zooov__image zooov__image--dog">
-			<img loading="lazy" src="img/zooov-4.png" alt="Сердечко" class="zooov__image  zooov__image--heart">
+			<img loading="lazy" src="img/zooov-3.png" width="90" height="90" alt="Питбуль" class="zooov__image zooov__image--dog">
+			<img loading="lazy" src="img/zooov-4.png" width="90" height="90" alt="Сердечко" class="zooov__image  zooov__image--heart">
 		</div>
 
 		<div class="zooov__info">
